src/main/resources/tests/Semantics/good/recordAlready.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure UseRecord is
   X : integer;
   type RecordTest is record
      Field1 : integer;
   end record;
   Var1 : RecordTest;
begin
   X := 10;
end UseRecord;
