src/main/resources/tests/Semantics/bad/operationBool7.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : boolean;
begin
   X := true or else 'f';
end ExampleProcedure;
